# MPI_exercise

./: CMakeLists.txt  main.cc  run.sh
